# sms-master

src/: CMakeLists.txt  SMS-ubuntu  main.cpp
src/attendance/: attendance.cpp  attendance.h
src/core/: init.cpp  init.h  menu.cpp  menu.h  view.cpp  view.h
src/core/auth/: user.cpp  user.h
src/courses/: courses.cpp  courses.h
